スタジアム関連_追加(修正1)
